# IV2py

./: .gitmodules  CMakeLists.txt  README.md  cpm.dependencies  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: ci_build-wheel.yml  ci_linux.yml  ci_macos.yml  ci_on_pr.yml
docs/: example-search.md  fmindex.md  formats-bam.md  formats-fasta.md  index.md  suffixarray.md
python-bindings/: README.md  build-wheels.sh  build.sh  pyproject.toml  setup.py
src/iv2py/: CMakeLists.txt  fasta.cpp  fmindex.cpp  main.cpp  normalize.cpp  record_reader.h  sam.cpp  sigma.cpp  suffixarray.cpp
src/ivpy/: CMakeLists.txt  fasta.cpp  main.cpp  record_reader.h  sam.cpp
tests/: test_fasta.py  test_fmindex.py  test_suffixarray.py
