# SPDX-FileCopyrightText: 2006-2023, Knut Reinert & Freie Universität Berlin
# SPDX-FileCopyrightText: 2016-2023, Knut Reinert & MPI für molekulare Genetik
# SPDX-License-Identifier: CC0-1.0
[project]
name = "iv2py"
version = "0.6.1"
authors = [
  { name="Simon Gene Gottlieb", email="iv2py.simon@gottliebtfreitag.de" },
]
description = "IV2py bioinformatic utilities"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.urls]
"Homepage" = "https://github.com/iv-project/IV2py"

[project.optional-dependencies]
test = ["pytest"]

[tool.cibuildwheel.linux]
# Use manylinux_2_28 to have a gcc12 compiler
manylinux-x86_64-image = "manylinux_2_28"

archs = ["x86_64"]
build = ["cp*-manylinux_*"]

[tool.cibuildwheel.macos]
archs = ["auto"]
build = ["cp*-macosx_*"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
build = ["cp*"]
