[project]
name = "ivpy"
version = "0.3.0"
authors = [
  { name="Simon Gene Gottlieb", email="ivpy.simon@gottliebtfreitag.de" },
]
description = "IVpy bioinformatic utilities"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.urls]
"Homepage" = "https://github.com/SGSSGene/IVpy"
