[project]
name = "iv2py"
version = "0.3.3"
authors = [
  { name="Simon Gene Gottlieb", email="iv2py.simon@gottliebtfreitag.de" },
]
description = "IV2py bioinformatic utilities"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.urls]
"Homepage" = "https://github.com/SGSSGene/IV2py"
