# SPDX-FileCopyrightText: 2006-2023, Knut Reinert & Freie Universität Berlin
# SPDX-FileCopyrightText: 2016-2023, Knut Reinert & MPI für molekulare Genetik
# SPDX-License-Identifier: CC0-1.0
[project]
name = "iv2py"
version = "0.3.4"
authors = [
  { name="Simon Gene Gottlieb", email="iv2py.simon@gottliebtfreitag.de" },
]
description = "IV2py bioinformatic utilities"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.urls]
"Homepage" = "https://github.com/iv-project/IV2py"
